Add condition and time fields to the daily data
